changed - Path expressions should now use path template syntax instead of wildcard variables.