@@ -6,17 +6,17 @@
 // are only updated when the other one exists.
 
 path /secret/{uid} is String {
-  read() = isUser(uid);
-  validate() = root.users[uid] != null;
+  read() { isUser(uid) }
+  validate() { root.users[uid] != null }
 }
 
 path /users/{uid} is User {
-  read() = true;
-  validate() = root.secret[uid] != null;
+  read() { true }
+  validate() { root.secret[uid] != null }
 }
 
 type User {
   name: String
 }
 
-isUser(uid) = auth != null && auth.uid == uid;
+isUser(uid) { auth != null && auth.uid == uid }
